refactor(graph_presets): 更新预设配置以改进节点连接和布局
- 移除 EventBus 中未使用的 HashMap 导入
- 使用 Set.copyOf 替代 Collections.unmodifiableSet
- 更新 Textured Box 预设描述和节点布局，添加几何预览功能
- 重新设计 Array Transform 预设，添加状态配置和预览功能
- 修改 Boolean Cut 预设名称为 Boolean Cut + Voxelize，更新连接流程
- 重构 QuickStart 预设中的基本盒子、球体、围墙和塔结构
- 优化节点连接顺序，先预览几何再转换为方块预览
- 添加更多节点状态配置参数
- 统一输入节点引用命名规范